--- a/gestion_usuarios.properties
+++ b/gestion_usuarios.properties
@@ -1,10 +1,13 @@
 server.port=8081
+
+spring.jpa.hibernate.ddl-auto=create  # Esto crea las tablas antes de ejecutar el script de datos
 spring.datasource.url=jdbc:hsqldb:mem:testdb
 spring.datasource.driverClassName=org.hsqldb.jdbc.JDBCDriver
 spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.HSQLDialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.initialization-mode=always  # Esto asegura que los scripts se ejecuten
+
 spring.jpa.show-sql=true  # Muestra las consultas SQL en consola
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
