--- a/gestion_usuarios.properties
+++ b/gestion_usuarios.properties
@@ -1,11 +1,10 @@
 server.port=8081
 
-spring.jpa.hibernate.ddl-auto=create  # Esto crea las tablas antes de ejecutar el script de datos
+spring.jpa.hibernate.ddl-auto=create 
 spring.datasource.url=jdbc:hsqldb:mem:testdb
 spring.datasource.driverClassName=org.hsqldb.jdbc.JDBCDriver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.HSQLDialect
-spring.datasource.initialization-mode=always  # Esto asegura que los scripts se ejecuten
-
+spring.datasource.initialization-mode=always  
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
