--- a/gestion_usuarios.properties
+++ b/gestion_usuarios.properties
@@ -1,10 +1,8 @@
 server.port=8001
 
-spring.jpa.hibernate.ddl-auto=create 
-spring.datasource.url=jdbc:hsqldb:mem:testdb
-spring.datasource.driverClassName=org.hsqldb.jdbc.JDBCDriver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.HSQLDialect
-spring.datasource.initialization-mode=always  
+spring.datasource.url=jdbc:postgresql://localhost:5432/CONSEJO
+spring.datasource.username=postgre
+spring.datasource.password=12345
+spring.datasource.driver-class-name=org.postgresql.Driver  
+spring.datasource.platform=postgresql  
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
