--- a/gestion_usuarios.properties
+++ b/gestion_usuarios.properties
@@ -1,8 +1,10 @@
 server.port=8001
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/CONSEJO
-spring.datasource.username=postgre
+spring.datasource.username=postgres
 spring.datasource.password=12345
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.security.enabled=false
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.platform=postgresql  
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+spring.jpa.hibernate.ddl-auto=none
