--- a/service_central.properties
+++ b/service_central.properties
@@ -1,2 +1,9 @@
 server.port=8001
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/CONSEJO
+spring.datasource.username=postgres
+spring.datasource.password=12345
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.security.enabled=false
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=none
