--- a/service_central.properties
+++ b/service_central.properties
@@ -1,5 +1,6 @@
 server.port=8001
 spring.datasource.url=jdbc:postgresql://localhost:5432/CONSEJO
+service.usuario.name=http://localhost:8002
 spring.datasource.username=postgres
 spring.datasource.password=12345
 spring.jpa.hibernate.ddl-auto=update
